--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -1,7 +1,29 @@
 ---
-title: Mental models for designers PART 2
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
+title: 测试为DogeKing赋能
+description: "目前是一个测试"
 date: Sep 14 2021
 ---
 
-This is an example post. There's another one [here](/posts/example-post).
+这是一个Dogeking志愿者维护的网站，为Dogeking 社群赋能
+
+我将在未来五年中持续完善Dogeking的社群，系统，世界观。每日为Dogeking提供1小时时间
+
+初见线路图
+
+1 网站开发，社群完善，连接。
+
+2 资源汇总
+
+3 Dogeking机制
+
+4 Dogeking 应用开发线路图
+
+5 Dogeking 元宇宙开发线路图
+
+6 Dogeking 运营计划
+
+7 Dogeking 共识线路图
+
+8 Dogeking 培训计划, 区块链初识,区块链更
+
+> Dogeking 中国的BTC
