--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -1,20 +1,22 @@
 ---
-title: 测试为DogeKing赋能
-description: "目前是一个测试"
+title: 为DogeKing赋能
+description: "志愿者创建，将持续更新"
 date: May 7 2022
 ---
 
 这是一个Dogeking志愿者维护的网站，为Dogeking 社群赋能
 
-我将在未来五年中持续完善Dogeking的社群，系统，世界观。每日为Dogeking提供1小时时间
+本站点使用github托管，完全开源，社群共建，共创。有好的意见可以通过留言和提案系统中沟通。
 
-初见线路图
+管理员计划未来五年中将持续推进Dogeking的社群，系统，世界观。每周为Dogeking贡献4-8小时时间。
+
+初步线路图
 
 1 网站开发，社群完善，连接。
 
-2 资源汇总
+2 资源汇总，验证各种为Dogeking有用的工具。
 
-3 Dogeking机制
+3 Dogeking机制，新建页面，对机制进行更清晰的描述。
 
 4 Dogeking 应用开发线路图
 
@@ -24,6 +26,6 @@ date: May 7 2022
 
 7 Dogeking 共识线路图
 
-8 Dogeking 培训计划, 区块链初识,区块链更
+8 Dogeking 培训计划, 区块链初识,区块链深入，为有需要社区成员以及子女提供更多有效资源。让更多人可以接入元宇宙。
 
 > Dogeking 中国的BTC
