--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -4,11 +4,11 @@ description: "志愿者创建，将持续更新"
 date: May 7 2022
 ---
 
-这是一个Dogeking志愿者维护的网站，为Dogeking 社群赋能
+这是一个Dogeking志愿者维护的网站，为Dogeking 社群赋能，持续完善
 
 本站点使用github托管，完全开源，社群共建，共创。有好的意见可以通过留言和提案系统中沟通。
 
-管理员计划未来五年中将持续推进Dogeking的社群，系统，世界观。每周为Dogeking贡献4-8小时时间。
+管理员计划未来五年中将持续推进Dogeking的社群，系统，世界观。
 
 初步线路图
 
@@ -29,3 +29,17 @@ date: May 7 2022
 8 Dogeking 培训计划, 区块链初识,区块链深入，为有需要社区成员以及子女提供更多有效资源。让更多人可以接入元宇宙。
 
 > Dogeking 中国的BTC
+
+-- DogeKing Hub
+
+https://dogekingdao.top/  可以查看dogeking待分配doge的链上工具(开发者未知)
+
+https://dogeking.one/ 社群志愿者创作的英文网站
+
+https://twitter.com/DogeKingEN 前项目方的Twitter
+
+https://medium.com/@dgkingen 未更新
+
+其他待完善
+
+
