--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -26,7 +26,7 @@ date: May 7 2022
 
 7 Dogeking 共识线路图
 
-8 Dogeking 培训计划, 区块链初识,区块链深入，为有需要社区成员以及子女提供更多有效资源。让更多人可以接入元宇宙。
+8 Dogeking 培训计划, 区块链初识,区块链深入，为有需求的狗王社区成员以及下一代提供更多有效资源和工具。让更多人可以接入元宇宙。
 
 > Dogeking 中国的BTC
 
