--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -28,6 +28,8 @@ date: May 7 2022
 
 8 Dogeking 培训计划, 区块链初识,区块链深入，为有需求的狗王社区成员以及下一代提供更多有效资源和工具。让更多人可以接入元宇宙。
 
+9 Dogeking 媒体，图像，3D模型，元宇宙其他生态接入。
+
 > Dogeking 中国的BTC
 
 -- DogeKing Hub
